fix: several badges in events on home view are now right-aligned

--- a/src/components/ContentCard/styles.module.css
+++ b/src/components/ContentCard/styles.module.css
@@ -143,6 +143,7 @@
   .badges {
     order: 0;
     margin-bottom: 0;
+    justify-content: flex-end;
   }
 
   .cardMetaInfo {
